objects/WR_ORACLE_SalesOrder__c.object
<CustomObject>
    <description>Oracle Salesorder Replicate. - Packing slip information for warranty registration - populated by Middleware from Oracle (John Taylor 7/14/2014)</description>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateByCastIron__c</fullName>
        <label>LastModifiedDateByCastIron</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Modified_by_CastIron__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Modified by CastIron</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Account_Number__c</fullName>
        <label>Oracle Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Sales_Order_And_Created_Date__c</fullName>
        <formula>Sales_Order__c &amp; &quot; &quot; &amp; TEXT(So_Created__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Sales Order And Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Slip__c</fullName>
        <externalId>true</externalId>
        <label>Packing Slip</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WR_ORACLE_SalesOrder</relationshipLabel>
        <relationshipName>WR_ORACLE_SalesOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Orderd__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity_Orderd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>So_Created__c</fullName>
        <label>So Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <label>Theater</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>WR_ORACLE_SalesOrder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>SFDC_NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WR_ORACLE_SalesOrder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Duplicate_Record_from_Cast_Iron</fullName>
        <active>false</active>
        <description>Duplicate record came for upsert from Cast Iron Process.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
NOT(ISChanged( Packing_Slip__c )),
NOT(ISChanged( Sales_Order__c )),
NOT(ISChanged(So_Created__c ))
)</errorConditionFormula>
        <errorMessage>Duplicate PL#,SO Created Date,SO#</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Packing_Slip_Required</fullName>
        <active>true</active>
        <description>Packslip no is required</description>
        <errorConditionFormula>ISBLANK( Packing_Slip__c )</errorConditionFormula>
        <errorDisplayField>Packing_Slip__c</errorDisplayField>
        <errorMessage>Not saved due to blank delivery no, packing slip.</errorMessage>
    </validationRules>
</CustomObject>